fix user bio in search result

--- a/templates/users/index.html
+++ b/templates/users/index.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+
+<!-- Handles search results -->
 {% block content %}
   {% if users|length == 0 %}
     <h3>Sorry, no users found</h3>
@@ -36,7 +38,7 @@
                     {% endif %}
 
                   </div>
-                  <p class="card-bio">BIO HERE</p>
+                  <p class="card-bio">{{ user.bio}}</p>
                 </div>
               </div>
             </div>
