--- a/templates/users/likes.html
+++ b/templates/users/likes.html
@@ -4,7 +4,7 @@
     <div class="col-sm-9">
         <div class="row">
             <ul class="list-group" id="messages">
-                {% for msg in likes %}
+                {% for msg in user.likes %}
                     <li class="list-group-item">
                         <a href="/messages/{{ msg.id}}" class="message-link"/>
                         <a href="/users/{{ msg.user.id }}">
