--- a/templates/home.html
+++ b/templates/home.html
@@ -44,7 +44,7 @@
           <li class="list-group-item">
             <a href="/messages/{{ msg.id  }}" class="message-link"/>
             <a href="/users/{{ msg.user.id }}">
-              <img src="{{ msg.user.image_url }}" alt="" class="timeline-image">
+              <img src="{{ msg.user.image_url }}" alt="{{msg.user.username}}" class="timeline-image">
             </a>
             <div class="message-area">
               <a href="/users/{{ msg.user.id }}">@{{ msg.user.username }}</a>
