--- a/templates/home.html
+++ b/templates/home.html
@@ -51,12 +51,21 @@
               <span class="text-muted">{{ msg.timestamp.strftime('%d %B %Y') }}</span>
               <p>{{ msg.text }}</p>
             </div>
-            <form method="POST" action="/messages/{{ msg.id }}/like" class="messages-like">
-              <button class="btn btn-sm
-              {{'btn-primary' if msg.id in likes else 'btn-secondary'}}">
-                <i class="fa fa-thumbs-up"></i> 
-              </button>
-            </form>
+            {% if msg.user.id != g.user.id %}
+              <form 
+                method="POST" 
+                action="/messages/{{ msg.id }}/like" 
+                id="messages-form"
+              >
+                <button class="
+                  btn 
+                  btn-sm
+                  {{'btn-primary' if msg.id in likes else 'btn-secondary'}}"
+                >
+                    <i class="fa fa-thumbs-up"></i> 
+                </button>
+              </form>
+            {% endif %}
           </li>
         {% endfor %}
       </ul>
