--- a/templates/users/likes.html
+++ b/templates/users/likes.html
@@ -16,7 +16,7 @@
                             <p>{{ msg.text }}</p>
                         </div>
                         {% if user.id == g.user.id %}
-                            <form method="POST" action="/messages/{{ msg.id }}/like" class="messages-like">
+                            <form method="POST" action="/messages/{{ msg.id }}/like" id="messages-form">
                                 <button class="btn btn-sm {{'btn-primary'}}">
                                     <i class="fa fa-thumbs-up"></i> 
                                 </button>
